styles/style.css
:root {
  --var-main-color: #eee;
  --var-aux-color: #a6a6a6;
  --var-main-contrast-color: #1a1a1a;
  --var-aux-contrast-color: #2e3131;
}

* {
  padding: 0;
  margin: 0;

  box-sizing: border-box;
  text-decoration: none;
  list-style: none;
}

body {
  background-color: var(--var-main-contrast-color);
}

img {
  display: block;
}

.header {
  display: flex;
  justify-content: space-between;
  margin: 20px 60px 0 60px;
}

.nav ul {
  display: flex;
  gap: 15px;
}

.nav li img {
  width: 30px;
  height: 30px;
  opacity: 0.1;
  transition: 0.5s ease-in;
}

.nav li img:hover {
  opacity: 1;
}

h1 {
  color: var(--var-main-color);
  font-family: 'Manrope', sans-serif;
  font-weight: 200;
  line-height: 1;
}

h2 {
  color: var(--var-aux-color);
  font-family: 'Manrope', sans-serif;
  font-weight: 200;
  line-height: 1;
}

p,
span,
.quote {
  font-family: 'Manrope', sans-serif;
  font-weight: 200;
  line-height: 1;
  color: var(--var-aux-color);
}

.main {
  margin: 100px 300px 60px 160px;
  border-right: 1px solid var(--var-aux-contrast-color);
  animation: show 3s forwards;
}

.main h1:nth-child(1) {
  font-size: 6em;
}
.main h1:nth-child(2) {
  font-size: 4.5em;
  padding-left: 70px;
  margin-bottom: 30px;
}

.main h2 {
  font-size: 4.5em;
}

.call-to-action {
  margin-left: 65px;
  margin-top: 60px;
}

.call-to-action a {
  font-size: 2.25em;
  color: var(--var-main-color);
  font-weight: 200;
  line-height: 1;
  font-family: 'Manrope', sans-serif;
}

@keyframes show {
  from {
    opacity: 0;
    transform: translate3d(-30px, 0, 0);
  }
  to {
    opacity: 1;
    transform: translate3d(0px, 0, 0);
  }
}

.line {
  margin: 0 auto;
  background: var(--var-aux-contrast-color);
  width: 1px;
  height: 60px;
}

.about {
  text-align: center;
  margin-top: 60px;
  padding-bottom: 60px;
}

.about p {
  font-size: 3em;
  margin: 30px 0 30px 0;
  color: var(--var-main-color);
}

.about span {
  font-size: 2.5em;
}

.quote {
  margin-top: 90px;
  font-size: 2.5em;
}

@media only screen and (max-width: 1200px) {
  .main {
    margin: 60px;
  }
  .main h1:nth-child(1) {
    font-size: 5em;
  }
  .main h1:nth-child(2) {
    font-size: 3.5em;
  }

  .main h2 {
    font-size: 3.5em;
  }

  .call-to-action a {
    font-size: 3.5em;
  }
}

@media only screen and (max-width: 500px) {
  .header {
    margin: 10px 20px 0 20px;
  }

  .main {
    margin: 40px 20px 40px 20px;
  }
  .main h1:nth-child(1) {
    font-size: 3em;
  }
  .main h1:nth-child(2) {
    font-size: 2.5em;
    padding-left: 35px;
  }

  .main h2 {
    font-size: 1.75em;
    margin-bottom: 10px;
  }

  .call-to-action {
    margin-left: 35px;
  }

  .call-to-action a {
    font-size: 1.75em;
  }

  .about p {
    font-size: 1.75em;
  }

  .about span {
    font-size: 1.25em;
  }

  .quote {
    font-size: 1.25em;
  }
}

@media only screen and (max-width: 350px) {
  .main h1:nth-child(1) {
    font-size: 2em;
  }
  .main h1:nth-child(2) {
    font-size: 1.5em;
    padding-left: 23px;
  }

  .main h2 {
    font-size: 1.25em;
    margin-bottom: 10px;
  }

  .call-to-action {
    margin-left: 23px;
  }

  .call-to-action a {
    font-size: 1.25em;
  }

  .about p {
    font-size: 1.25em;
  }

  .about span {
    font-size: 1em;
  }

  .quote {
    font-size: 1em;
  }
}

